--- a/index.html
+++ b/index.html
@@ -15,5 +15,45 @@
 </head>
 <body>
 
+<header>
+	<nav class="header__navigation">
+		<div class="container">
+			<div class="row">
+				<div class="navbar-header">
+					<button class="navbar-toggle collapsed menu_btn" data-toggle="collapse" data-target="#top_menu">
+						<span class="glyphicon glyphicon-menu-hamburger"></span>
+					</button>
+					<a href="index.html" class="navbar-brand logo">
+						<img src="img/logo.png" alt="logo">
+					</a>
+				</div>
+				<div class="collapse navbar-collapse navbar-right" id="top_menu">
+					<ul class="header__menu">
+						<li class="header__list"><a class="header__link" href="#">Home</a></li>
+						<li class="header__list"><a class="header__link" href="#">About Us</a></li>
+						<li class="header__list"><a class="header__link" href="#">Gallery</a></li>
+						<li class="header__list"><a class="header__link" href="#">Blog</a></li>
+						<li class="header__list"><a class="header__link" href="#">Contacts</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="header__line"></div>
+		</div>
+	</nav>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<div class="header__banner">
+					<h1 class="header__title">Your Favorite One Page Multi Purpose Template</h1>
+					<p class="header__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe adipisci necessitatibus labore vero accusamus sint.</p>
+					<div class="header__button">
+						<button class="button button_small">Find out more</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</header>
+
 </body>
 </html>
