--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Adaptive website. Part 3</title>
+	<title>Simple Landing Page</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -54,6 +54,310 @@
 		</div>
 	</div>
 </header>
+<section class="items">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4">
+				<div class="items__container">
+					<i class="params__icon fa fa-desktop"></i>
+					<h4 class="items__title">Easily costomised</h4>
+					<p class="items__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo qui nam beatae eligendi quia pariatur facere consequatur libero dolore excepturi.</p>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="items__container">
+					<i class="params__icon fa fa-desktop"></i>
+					<h4 class="items__title">Easily costomised</h4>
+					<p class="items__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo qui nam beatae eligendi quia pariatur facere consequatur libero dolore excepturi.</p>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="items__container">
+					<i class="params__icon fa fa-desktop"></i>
+					<h4 class="items__title">Easily costomised</h4>
+					<p class="items__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo qui nam beatae eligendi quia pariatur facere consequatur libero dolore excepturi.</p>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="items__container">
+					<i class="params__icon fa fa-desktop"></i>
+					<h4 class="items__title">Easily costomised</h4>
+					<p class="items__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo qui nam beatae eligendi quia pariatur facere consequatur libero dolore excepturi.</p>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="items__container">
+					<i class="params__icon fa fa-desktop"></i>
+					<h4 class="items__title">Easily costomised</h4>
+					<p class="items__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo qui nam beatae eligendi quia pariatur facere consequatur libero dolore excepturi.</p>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="items__container">
+					<i class="params__icon fa fa-desktop"></i>
+					<h4 class="items__title">Easily costomised</h4>
+					<p class="items__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo qui nam beatae eligendi quia pariatur facere consequatur libero dolore excepturi.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+<section class="projects">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-3">
+				<div class="projects__container">
+					<div class="projects__wrapper">
+						<div class="projects__desc">
+							<h4 class="projects__title">Projects Name</h4>
+							<p class="projects__text">Some description</p>
+						</div>
+					</div>
+					<img src="img/work-1.jpg" alt="projectsItem" class="projects__img">
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="projects__container">
+					<div class="projects__wrapper">
+						<div class="projects__desc">
+							<h4 class="projects__title">Projects Name</h4>
+							<p class="projects__text">Some description</p>
+						</div>
+					</div>
+					<img src="img/work-2.jpg" alt="projectsItem" class="projects__img">
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="projects__container">
+					<div class="projects__wrapper">
+						<div class="projects__desc">
+							<h4 class="projects__title">Projects Name</h4>
+							<p class="projects__text">Some description</p>
+						</div>
+					</div>
+					<img src="img/work-3.jpg" alt="projectsItem" class="projects__img">
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="projects__container">
+					<div class="projects__wrapper">
+						<div class="projects__desc">
+							<h4 class="projects__title">Projects Name</h4>
+							<p class="projects__text">Some description</p>
+						</div>
+					</div>
+					<img src="img/work-4.jpg" alt="projectsItem" class="projects__img">
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="projects__container">
+					<div class="projects__wrapper">
+						<div class="projects__desc">
+							<h4 class="projects__title">Projects Name</h4>
+							<p class="projects__text">Some description</p>
+						</div>
+					</div>
+					<img src="img/work-5.jpg" alt="projectsItem" class="projects__img">
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="projects__container">
+					<div class="projects__wrapper">
+						<div class="projects__desc">
+							<h4 class="projects__title">Projects Name</h4>
+							<p class="projects__text">Some description</p>
+						</div>
+					</div>
+					<img src="img/work-6.jpg" alt="projectsItem" class="projects__img">
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="projects__container">
+					<div class="projects__wrapper">
+						<div class="projects__desc">
+							<h4 class="projects__title">Projects Name</h4>
+							<p class="projects__text">Some description</p>
+						</div>
+					</div>
+					<img src="img/work-7.jpg" alt="projectsItem" class="projects__img">
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="projects__container">
+					<div class="projects__wrapper">
+						<div class="projects__desc">
+							<h4 class="projects__title">Projects Name</h4>
+							<p class="projects__text">Some description</p>
+						</div>
+					</div>
+					<img src="img/work-8.jpg" alt="projectsItem" class="projects__img">
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+<section class="team">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-3">
+				<div class="team__container">
+					<img src="img/team-1.jpg" alt="teamMember" class="team__img">
+					<div class="team__desc">
+						<h4 class="team__title">Ruth Woods</h4>
+						<p class="team__position">Founder CEO</p>
+						<p class="team__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam aspernatur doloribus illo, maiores assumenda aut cupiditate, vitae nobis corrupti rem laudantium ut voluptatibus aliquid reiciendis ad odio libero atque architecto.</p>
+					</div>
+					<div class="team__buttons">
+						<div class="social">
+							<button class="social__icon social__icon_silver">
+								<i class="fa fa-facebook"></i>
+							</button>
+							<button class="social__icon social__icon_silver">
+								<i class="fa fa-twitter"></i>
+							</button>
+							<button class="social__icon social__icon_silver">
+								<i class="fa fa-linkedin-square"></i>
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="team__container">
+					<img src="img/team-2.jpg" alt="teamMember" class="team__img">
+					<div class="team__desc">
+						<h4 class="team__title">James Smith</h4>
+						<p class="team__position">Financial director</p>
+						<p class="team__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam aspernatur doloribus illo, maiores assumenda aut cupiditate, vitae nobis corrupti rem laudantium ut voluptatibus aliquid reiciendis ad odio libero atque architecto.</p>
+					</div>
+					<div class="team__buttons">
+						<div class="social">
+							<button class="social__icon social__icon_silver">
+								<i class="fa fa-facebook"></i>
+							</button>
+							<button class="social__icon social__icon_silver">
+								<i class="fa fa-twitter"></i>
+							</button>
+							<button class="social__icon social__icon_silver">
+								<i class="fa fa-linkedin-square"></i>
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="team__container">
+					<img src="img/team-3.jpg" alt="teamMember" class="team__img">
+					<div class="team__desc">
+						<h4 class="team__title">Ammy Willson</h4>
+						<p class="team__position">Art director</p>
+						<p class="team__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam aspernatur doloribus illo, maiores assumenda aut cupiditate, vitae nobis corrupti rem laudantium ut voluptatibus aliquid reiciendis ad odio libero atque architecto.</p>
+					</div>
+					<div class="team__buttons">
+						<div class="social">
+							<button class="social__icon social__icon_silver">
+								<i class="fa fa-facebook"></i>
+							</button>
+							<button class="social__icon social__icon_silver">
+								<i class="fa fa-twitter"></i>
+							</button>
+							<button class="social__icon social__icon_silver">
+								<i class="fa fa-linkedin-square"></i>
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="team__container">
+					<img src="img/team-1.jpg" alt="teamMember" class="team__img">
+					<div class="team__desc">
+						<h4 class="team__title">Kate Buttler</h4>
+						<p class="team__position">Manager</p>
+						<p class="team__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam aspernatur doloribus illo, maiores assumenda aut cupiditate, vitae nobis corrupti rem laudantium ut voluptatibus aliquid reiciendis ad odio libero atque architecto.</p>
+					</div>
+					<div class="team__buttons">
+						<div class="social">
+							<button class="social__icon social__icon_silver">
+								<i class="fa fa-facebook"></i>
+							</button>
+							<button class="social__icon social__icon_silver">
+								<i class="fa fa-twitter"></i>
+							</button>
+							<button class="social__icon social__icon_silver">
+								<i class="fa fa-linkedin-square"></i>
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+<section class="download">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3">
+				<div class="download__container">
+					<h2 class="download__title">Are you ready to start? Download for free!</h2>
+					<p class="download__text">Lorem ipsum dolor sit amet, consectetur</p>
+					<div class="download__button">
+						<button class="button button_large">Download Now</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+<footer>
+	<div class="footer__top">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="footer__container">
+						<h5 class="footer__title">Location</h5>
+						<p class="footer__text">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="footer__container">
+						<h5 class="footer__title">Location</h5>
+						<div class="footer__buttons">
+							<div class="social">
+								<button class="social__icon social__icon_white">
+									<i class="fa fa-facebook"></i>
+								</button>
+								<button class="social__icon social__icon_white">
+									<i class="fa fa-twitter"></i>
+								</button>
+								<button class="social__icon social__icon_white">
+									<i class="fa fa-linkedin-square"></i>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="footer__container">
+						<h5 class="footer__title">Location</h5>
+						<p class="footer__text">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="footer__bottom">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 col-md-offset-4">
+					<div class="footer__container">
+						<p class="footer__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, numquam.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</footer>
 
 </body>
 </html>
