added styling for desktop

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<button class="navbar-toggle collapsed menu_btn" data-toggle="collapse" data-target="#top_menu">
 						<span class="glyphicon glyphicon-menu-hamburger"></span>
 					</button>
-					<a href="index.html" class="navbar-brand logo">
+					<a href="index.html" class="navbar-brand header__logo">
 						<img src="img/logo.png" alt="logo">
 					</a>
 				</div>
@@ -105,7 +105,7 @@
 <section class="projects">
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-3">
+			<div class="col-md-3 noPadding">
 				<div class="projects__container">
 					<div class="projects__wrapper">
 						<div class="projects__desc">
@@ -116,7 +116,7 @@
 					<img src="img/work-1.jpg" alt="projectsItem" class="projects__img">
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 noPadding">
 				<div class="projects__container">
 					<div class="projects__wrapper">
 						<div class="projects__desc">
@@ -127,7 +127,7 @@
 					<img src="img/work-2.jpg" alt="projectsItem" class="projects__img">
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 noPadding">
 				<div class="projects__container">
 					<div class="projects__wrapper">
 						<div class="projects__desc">
@@ -138,7 +138,7 @@
 					<img src="img/work-3.jpg" alt="projectsItem" class="projects__img">
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 noPadding">
 				<div class="projects__container">
 					<div class="projects__wrapper">
 						<div class="projects__desc">
@@ -149,7 +149,7 @@
 					<img src="img/work-4.jpg" alt="projectsItem" class="projects__img">
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 noPadding">
 				<div class="projects__container">
 					<div class="projects__wrapper">
 						<div class="projects__desc">
@@ -160,7 +160,7 @@
 					<img src="img/work-5.jpg" alt="projectsItem" class="projects__img">
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 noPadding">
 				<div class="projects__container">
 					<div class="projects__wrapper">
 						<div class="projects__desc">
@@ -171,7 +171,7 @@
 					<img src="img/work-6.jpg" alt="projectsItem" class="projects__img">
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 noPadding">
 				<div class="projects__container">
 					<div class="projects__wrapper">
 						<div class="projects__desc">
@@ -182,7 +182,7 @@
 					<img src="img/work-7.jpg" alt="projectsItem" class="projects__img">
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 noPadding">
 				<div class="projects__container">
 					<div class="projects__wrapper">
 						<div class="projects__desc">
@@ -203,9 +203,9 @@
 				<div class="team__container">
 					<img src="img/team-1.jpg" alt="teamMember" class="team__img">
 					<div class="team__desc">
-						<h4 class="team__title">Ruth Woods</h4>
+						<h3 class="team__title">Ruth Woods</h3>
 						<p class="team__position">Founder CEO</p>
-						<p class="team__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam aspernatur doloribus illo, maiores assumenda aut cupiditate, vitae nobis corrupti rem laudantium ut voluptatibus aliquid reiciendis ad odio libero atque architecto.</p>
+						<p class="team__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam aspernatur doloribus illo, maiores assumenda aut cupiditate, vitae nobis corrupti rem laudantium ut voluptatibus aliquid.</p>
 					</div>
 					<div class="team__buttons">
 						<div class="social">
@@ -226,7 +226,7 @@
 				<div class="team__container">
 					<img src="img/team-2.jpg" alt="teamMember" class="team__img">
 					<div class="team__desc">
-						<h4 class="team__title">James Smith</h4>
+						<h3 class="team__title">James Smith</h3>
 						<p class="team__position">Financial director</p>
 						<p class="team__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam aspernatur doloribus illo, maiores assumenda aut cupiditate, vitae nobis corrupti rem laudantium ut voluptatibus aliquid reiciendis ad odio libero atque architecto.</p>
 					</div>
@@ -249,7 +249,7 @@
 				<div class="team__container">
 					<img src="img/team-3.jpg" alt="teamMember" class="team__img">
 					<div class="team__desc">
-						<h4 class="team__title">Ammy Willson</h4>
+						<h3 class="team__title">Ammy Willson</h3>
 						<p class="team__position">Art director</p>
 						<p class="team__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam aspernatur doloribus illo, maiores assumenda aut cupiditate, vitae nobis corrupti rem laudantium ut voluptatibus aliquid reiciendis ad odio libero atque architecto.</p>
 					</div>
@@ -270,9 +270,9 @@
 			</div>
 			<div class="col-md-3">
 				<div class="team__container">
-					<img src="img/team-1.jpg" alt="teamMember" class="team__img">
+					<img src="img/team-4.jpg" alt="teamMember" class="team__img">
 					<div class="team__desc">
-						<h4 class="team__title">Kate Buttler</h4>
+						<h3 class="team__title">Kate Buttler</h3>
 						<p class="team__position">Manager</p>
 						<p class="team__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam aspernatur doloribus illo, maiores assumenda aut cupiditate, vitae nobis corrupti rem laudantium ut voluptatibus aliquid reiciendis ad odio libero atque architecto.</p>
 					</div>
