--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 		<div class="container">
 			<div class="row">
 				<div class="navbar-header">
-					<button class="navbar-toggle collapsed menu_btn" data-toggle="collapse" data-target="#top_menu">
-						<span class="glyphicon glyphicon-menu-hamburger"></span>
+					<button class="navbar-toggle collapsed button button__menu" data-toggle="collapse" data-target="#header__navBar">
+						<span class="glyphicon glyphicon-menu-hamburger button__hamb"></span>
 					</button>
 					<a href="index.html" class="navbar-brand header__logo">
 						<img src="img/logo.png" alt="logo">
 					</a>
 				</div>
-				<div class="collapse navbar-collapse navbar-right" id="top_menu">
+				<div class="collapse navbar-collapse navbar-right" id="header__navBar">
 					<ul class="header__menu">
 						<li class="header__list"><a class="header__link" href="#">Home</a></li>
 						<li class="header__list"><a class="header__link" href="#">About Us</a></li>
@@ -57,44 +57,44 @@
 <section class="items">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-6">
 				<div class="items__container">
-					<i class="params__icon fa fa-desktop"></i>
+					<i class="items__icon fa fa-desktop"></i>
 					<h4 class="items__title">Easily costomised</h4>
 					<p class="items__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo qui nam beatae eligendi quia pariatur facere consequatur libero dolore excepturi.</p>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-6">
 				<div class="items__container">
-					<i class="params__icon fa fa-desktop"></i>
+					<i class="items__icon fa fa-desktop"></i>
 					<h4 class="items__title">Easily costomised</h4>
 					<p class="items__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo qui nam beatae eligendi quia pariatur facere consequatur libero dolore excepturi.</p>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-6">
 				<div class="items__container">
-					<i class="params__icon fa fa-desktop"></i>
+					<i class="items__icon fa fa-desktop"></i>
 					<h4 class="items__title">Easily costomised</h4>
 					<p class="items__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo qui nam beatae eligendi quia pariatur facere consequatur libero dolore excepturi.</p>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-6">
 				<div class="items__container">
-					<i class="params__icon fa fa-desktop"></i>
+					<i class="items__icon fa fa-desktop"></i>
 					<h4 class="items__title">Easily costomised</h4>
 					<p class="items__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo qui nam beatae eligendi quia pariatur facere consequatur libero dolore excepturi.</p>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-6">
 				<div class="items__container">
-					<i class="params__icon fa fa-desktop"></i>
+					<i class="items__icon fa fa-desktop"></i>
 					<h4 class="items__title">Easily costomised</h4>
 					<p class="items__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo qui nam beatae eligendi quia pariatur facere consequatur libero dolore excepturi.</p>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-6">
 				<div class="items__container">
-					<i class="params__icon fa fa-desktop"></i>
+					<i class="items__icon fa fa-desktop"></i>
 					<h4 class="items__title">Easily costomised</h4>
 					<p class="items__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo qui nam beatae eligendi quia pariatur facere consequatur libero dolore excepturi.</p>
 				</div>
@@ -105,7 +105,7 @@
 <section class="projects">
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-3 noPadding">
+			<div class="col-md-3 col-sm-6 noPadding">
 				<div class="projects__container">
 					<div class="projects__wrapper">
 						<div class="projects__desc">
@@ -116,7 +116,7 @@
 					<img src="img/work-1.jpg" alt="projectsItem" class="projects__img">
 				</div>
 			</div>
-			<div class="col-md-3 noPadding">
+			<div class="col-md-3 col-sm-6 noPadding">
 				<div class="projects__container">
 					<div class="projects__wrapper">
 						<div class="projects__desc">
@@ -127,7 +127,7 @@
 					<img src="img/work-2.jpg" alt="projectsItem" class="projects__img">
 				</div>
 			</div>
-			<div class="col-md-3 noPadding">
+			<div class="col-md-3 col-sm-6 noPadding">
 				<div class="projects__container">
 					<div class="projects__wrapper">
 						<div class="projects__desc">
@@ -138,7 +138,7 @@
 					<img src="img/work-3.jpg" alt="projectsItem" class="projects__img">
 				</div>
 			</div>
-			<div class="col-md-3 noPadding">
+			<div class="col-md-3 col-sm-6 noPadding">
 				<div class="projects__container">
 					<div class="projects__wrapper">
 						<div class="projects__desc">
@@ -149,7 +149,7 @@
 					<img src="img/work-4.jpg" alt="projectsItem" class="projects__img">
 				</div>
 			</div>
-			<div class="col-md-3 noPadding">
+			<div class="col-md-3 col-sm-6 noPadding">
 				<div class="projects__container">
 					<div class="projects__wrapper">
 						<div class="projects__desc">
@@ -160,7 +160,7 @@
 					<img src="img/work-5.jpg" alt="projectsItem" class="projects__img">
 				</div>
 			</div>
-			<div class="col-md-3 noPadding">
+			<div class="col-md-3 col-sm-6 noPadding">
 				<div class="projects__container">
 					<div class="projects__wrapper">
 						<div class="projects__desc">
@@ -171,7 +171,7 @@
 					<img src="img/work-6.jpg" alt="projectsItem" class="projects__img">
 				</div>
 			</div>
-			<div class="col-md-3 noPadding">
+			<div class="col-md-3 col-sm-6 noPadding">
 				<div class="projects__container">
 					<div class="projects__wrapper">
 						<div class="projects__desc">
@@ -182,7 +182,7 @@
 					<img src="img/work-7.jpg" alt="projectsItem" class="projects__img">
 				</div>
 			</div>
-			<div class="col-md-3 noPadding">
+			<div class="col-md-3 col-sm-6 noPadding">
 				<div class="projects__container">
 					<div class="projects__wrapper">
 						<div class="projects__desc">
@@ -199,7 +199,7 @@
 <section class="team">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-3">
+			<div class="col-md-3 col-sm-6">
 				<div class="team__container">
 					<img src="img/team-1.jpg" alt="teamMember" class="team__img">
 					<div class="team__desc">
@@ -222,7 +222,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-sm-6">
 				<div class="team__container">
 					<img src="img/team-2.jpg" alt="teamMember" class="team__img">
 					<div class="team__desc">
@@ -245,7 +245,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-sm-6">
 				<div class="team__container">
 					<img src="img/team-3.jpg" alt="teamMember" class="team__img">
 					<div class="team__desc">
@@ -268,7 +268,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-sm-6">
 				<div class="team__container">
 					<img src="img/team-4.jpg" alt="teamMember" class="team__img">
 					<div class="team__desc">
@@ -313,13 +313,13 @@
 	<div class="footer__top">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-4 col-sm-6">
 					<div class="footer__container">
 						<h5 class="footer__title">Location</h5>
 						<p class="footer__text">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 col-sm-6">
 					<div class="footer__container">
 						<h5 class="footer__title">Location</h5>
 						<div class="footer__buttons">
@@ -337,7 +337,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 hidden-sm">
 					<div class="footer__container">
 						<h5 class="footer__title">Location</h5>
 						<p class="footer__text">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
